source3/passdb/passdb.c
@@ -658,7 +658,8 @@ bool lookup_global_sam_name(const char *name, int flags, uint32_t *rid,
 	/* BUILTIN groups are looked up elsewhere */
 	if (!sid_check_is_in_our_sam(&map->sid)) {
 		DEBUG(10, ("Found group %s (%s) not in our domain -- "
-			   "ignoring.", name, sid_string_dbg(&map->sid)));
+			   "ignoring.\n",
+			   name, sid_string_dbg(&map->sid)));
 		TALLOC_FREE(map);
 		return False;
 	}
